# openapi-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
openapi_reader/: drf.py  fastapi.py  reader.py  schema.py  utils.py
tests/: conftest.py  test_openapi_definition.py  test_openapi_drf_definition.py  test_openapi_fastapi_definition.py
